--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,72 @@
-.App{
+.App {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: #042331;
+}
+
+.container {
+    background-color: #063146;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    width: 600px;
+}
+
+.title {
+    font-size: 28px;
+    text-align: center;
+    font-weight: bold;
+    color: white;
+    line-height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+}
+
+.message,
+.win {
+    color: yellow;
+    font-size: 18px;
+    text-align: center;
+}
+
+.content input {
+    width: 200px;
+    height: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    border: none;
+    border-radius: 10px;
+    padding: 2px 15px;
+}
+
+.content input:focus {
+    outline: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+.btns button {
+    padding: 5px 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    font-weight: 800;
+    border: none;
+    border-radius: 50px;
+    box-shadow:1px 1px 10px 1px #bdbdbd;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.btns{
+    display: flex;
+    gap: 15px;
 }
