--- a/src/App.css
+++ b/src/App.css
@@ -11,10 +11,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    padding: 20px;
+    justify-content: space-between;
+    padding: 60px 20px;
     border-radius: 10px;
     width: 600px;
+    height: 450px;
 }
 
 .title {
@@ -27,11 +28,21 @@
     text-transform: uppercase;
 }
 
+.score {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
 .message,
 .win {
-    color: yellow;
-    font-size: 18px;
+    color: red;
+    font-size: 20px;
     text-align: center;
+}
+
+.win {
+    color: palegreen;
 }
 
 .content input {
@@ -61,12 +72,73 @@ input::-webkit-inner-spin-button {
     font-weight: 800;
     border: none;
     border-radius: 50px;
-    box-shadow:1px 1px 10px 1px #bdbdbd;
+    box-shadow: 1px 1px 10px 1px #bdbdbd;
     cursor: pointer;
     text-transform: uppercase;
 }
 
-.btns{
+.btns {
     display: flex;
     gap: 15px;
+}
+
+@media screen and (max-width : 800px) {
+
+    .container {
+        width: 350px;
+        height: 400px;
+        padding: 60px 40px;
+    }
+
+    .title {
+        font-size: 20px;
+        line-height: 25px;
+    }
+
+    .score .message,
+    .score .win {
+        font-size: 16px;
+    }
+
+    .content input {
+        width: 200px;
+        height: 25px;
+        font-size: 16px;
+    }
+
+    .btns button {
+        padding: 5px 15px;
+        font-size: 14px;
+        font-weight: 800;
+    }
+}
+
+@media screen and (max-width : 480px) {
+
+    .container {
+        width: 280px;
+        padding: 60px 10px;
+    }
+
+    .title {
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .score .message,
+    .score .win {
+        font-size: 13px;
+    }
+
+    .content input {
+        width: 150px;
+        height: 20px;
+        font-size: 13px;
+    }
+
+    .btns button {
+        padding: 3px 10px;
+        font-size: 13px;
+        font-weight: 800;
+    }
 }
